test_files/s_cproc/macro_object_expand/test_018/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_018/i.input:1:24: error: parameter name missing
 #define MACRO2(A, a123,)
                        ^
